Title fix+Folie 3

--- a/pres.html
+++ b/pres.html
@@ -19,32 +19,43 @@
           <p class="fragment">Max, Julien und Linus</p>
         </section>
 
+        <!-- Wenn sections verschachtelt sind, werden damit Unterfolien erstellt.-->
         <section>
           <h3>Spielprinzip</h3>
-          <!-- Wenn sections verschachtelt sind, werden damit Unterfolien erstellt.-->
-          <section>
-            <h4>Jump'n'Run</h4>
-            <ul>
-              <li>Bis zum Ende des Levels kommen</li>
-              <li>Bomben machen Schaden</li>
-              <li>Musiknoten geben einen Speedboost</li>
-              <li>Nicht von der Plattform fallen</li>
-            </ul>
-          </section>
-          <section>
-            <h3>Story</h3>
-            <!-- Wenn sections verschachtelt sind, werden damit Unterfolien erstellt.-->
-            <section>
-              <h4>Verschiedene Aspekte</h4>
-              <ul>
-                <li>Über Kanye West</li>
-                <li>Backgrounds sind Albumcover</li>
-                <li>Man geht durch Verschiedene Etappen seines Lebens</li>
-              </ul>
-            </section>      <!-- Das hier ist dann die zweite Folie unter dem gleichen Titel.-->
+          <h4>Jump'n'Run</h4>
+          <ul>
+            <li>Bis zum Ende des Levels kommen</li>
+            <li>Bomben machen Schaden</li>
+            <li>Musiknoten geben einen Speedboost</li>
+            <li>Nicht von der Plattform fallen</li>
+          </ul>
+        </section>
+
+        <!-- Wenn sections verschachtelt sind, werden damit Unterfolien erstellt.-->
+        <section>
+          <h3>Story</h3>
+          <h4>Verschiedene Aspekte</h4>
+          <ul>
+            <li>Über Kanye West</li>
+            <li>Backgrounds sind Albumcover</li>
+            <li>Man geht durch Verschiedene Etappen seines Lebens</li>
+          </ul>
+        </section>
+        <!-- Das hier ist dann die zweite Folie unter dem gleichen Titel.-->
         <!-- Die letzte Folie soll einen direkten Link zum Spiel sein. -->
         <section>
           <a href="game.html" target="_blank">Demo</a>
+        </section>
+
+        <!-- Wenn sections verschachtelt sind, werden damit Unterfolien erstellt.-->
+        <section>
+          <h3>Herausforderungen</h3>
+          <h4>Probleme</h4>
+          <ul>
+            <li>Dreiergruppe</li>
+            <li>Wir sind keine Profis</li>
+            <li>Krankheitsfälle</li>
+          </ul>
         </section>
       </div>
     </div>
