--- a/pres.html
+++ b/pres.html
@@ -34,7 +34,7 @@
         <!-- Wenn sections verschachtelt sind, werden damit Unterfolien erstellt.-->
         <section>
           <h3>Story</h3>
-          <h4>Verschiedene Aspekte</h4>
+          <h4>Ziele</h4>
           <ul>
             <li>Über Kanye West</li>
             <li>Backgrounds sind Albumcover</li>
