--- a/pres.html
+++ b/pres.html
@@ -26,7 +26,8 @@
           <ul>
             <li>Bis zum Ende des Levels kommen</li>
             <li>Bomben machen Schaden</li>
-            <li>Musiknoten geben einen Speedboost</li>
+            <li>Musiknoten geben einen Speedboost und heilen 34HP</li>
+            <li>Grammy heilt 100HP</li>
             <li>Nicht von der Plattform fallen</li>
           </ul>
         </section>
@@ -53,7 +54,6 @@
           <h4>Probleme</h4>
           <ul>
             <li>Dreiergruppe</li>
-            <li>Wir sind keine Profis</li>
             <li>Krankheitsfälle</li>
           </ul>
         </section>
