level design und präsentation

--- a/pres.html
+++ b/pres.html
@@ -25,6 +25,9 @@
           <h4>Jump'n'Run</h4>
           <ul>
             <li>Bis zum Ende des Levels kommen</li>
+            <ul>
+              insgesamt 6 Levels
+            </ul>
             <li>Bomben machen Schaden</li>
             <li>Musiknoten geben einen Speedboost und heilen 34HP</li>
             <li>Grammy heilt 100HP</li>
@@ -39,7 +42,11 @@
           <ul>
             <li>Über Kanye West</li>
             <li>Backgrounds sind Albumcover</li>
-            <li>Man geht durch Verschiedene Etappen seines Lebens</li>
+            <li>Man erlebt die Alben durch die Musik im Hintergrund</li>
+            <li>Der Endboss ist Taylor Swift</li>
+            <ul>
+              man sagt dass Kanye West und Taylor Swift verfeindet sind
+            </ul>
           </ul>
         </section>
         <!-- Das hier ist dann die zweite Folie unter dem gleichen Titel.-->
@@ -56,6 +63,9 @@
             <li>Dreiergruppe</li>
             <li>Krankheitsfälle</li>
           </ul>
+        </section>
+        <section>
+          <h1>Vielen Dank fürs Zuhören!</h1>
         </section>
       </div>
     </div>
