--- a/index.html
+++ b/index.html
@@ -16,17 +16,20 @@
       </div>
       <section>
         <h2>Intro</h2>
-        Eine kurze Einführung in unser Spiel.
+        Eine kurze Einführung in unser Spiel: Wir haben ein Spiel über kanye
+        West erstellt, in dem man verschiedene Alben von ihm erleben kann.
       </section>
       <section>
         <h2>Spielprinzip</h2>
         <div class="text-with-image">
-          <div class="text">Hüpfe und habe Spass dabei.</div>
+          <div class="text">Hüpfe und geniesse das Spiel</div>
           <img src="img/jump-n-run.png" />
         </div>
         <div class="text-with-image">
           <img src="img/rpg.png" />
-          <div class="text">Sammle die Blume und gehe in die Höhle.</div>
+          <div class="text">
+            Sammle Musiknoten und Grammies aber vermeide Bomben
+          </div>
         </div>
       </section>
       <section>
