--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <img src="img/jump-n-run.png" />
         </div>
         <div class="text-with-image">
-          <img src="img/rpg.png" />
+          <img src="Bound2.png" />
           <div class="text">
             Sammle Musiknoten und Grammies aber vermeide Bomben
           </div>
