HP bar für taylor

--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
       <div class="center margin-tb">
         <a class="start-btn" href="game.html">Spiel starten</a>
       </div>
+      <div class="center margin-tb">
+        <a class="start-btn" href="pres.html">Präsentation</a>
+      </div>
       <section>
         <h2>Intro</h2>
-        Eine kurze Einführung in unser Spiel: Wir haben ein Spiel über kanye
-        West erstellt, in dem man verschiedene Alben von ihm erleben kann.
+        Eine kurze Einführung in unser Spiel: Wir haben ein Spiel über Kanye
+        West erstellt, in welchem man verschiedene Alben von ihm erleben kann.
       </section>
       <section>
         <h2>Spielprinzip</h2>
@@ -26,7 +29,7 @@
           <img src="img/Bild1.png" />
         </div>
         <div class="text-with-image">
-          <img src="Bound2.png" />
+          <img src="img/Bound2.png" />
           <div class="text">
             Sammle Musiknoten und Grammies aber vermeide Bomben
           </div>
@@ -37,11 +40,15 @@
         <div class="controls-table">
           <div class="controls-row">
             <pre>Space</pre>
-            <span>Springen</span>
+            <span>Boost</span>
           </div>
           <div class="controls-row">
             <pre>Pfeiltasten</pre>
             <span>In Richtung laufen</span>
+          </div>
+          <div class="controls-row">
+            <pre>m</pre>
+            <span>Mikrofon wird geworfen</span>
           </div>
         </div>
       </section>
