--- a/pres.html
+++ b/pres.html
@@ -49,6 +49,14 @@
             </ul>
           </ul>
         </section>
+        <section>
+          <h3>Vorgehen</h3>
+          <li>Zuerst haben wir einige Sprites erstellt</li>
+          <li>Erst danach mit dem eigentlichen programmieren angefangen</li>
+          <li>Max hat hauptsächlich die Designs der Level gemacht</li>
+          <li>Julien malte die Sprites</li>
+          <li>Linus programmierte hauptsächlich</li>
+        </section>
         <!-- Das hier ist dann die zweite Folie unter dem gleichen Titel.-->
         <!-- Die letzte Folie soll einen direkten Link zum Spiel sein. -->
         <section>
